--- a/index.html
+++ b/index.html
@@ -9,6 +9,134 @@
     <title>Example Portfolio</title>
 </head>
 <body>
-    <h1>Hello GitHub.io !</h1>
+    <h3>記事の内容</h3>
+<p> </p>
+<p>Netflixオリジナルドラマ『クイーンズギャンビット』。</p>
+<p> </p>
+<p>公開されるやいなや「面白い」という声が続出の作品になっています。</p>
+<p> </p>
+<p>まだ幼い少女がチェスの才能を開花させ、世界一への階段を上っていく様を描いています。</p>
+<p> </p>
+<p>さっそく全話見てきました。とてもおもしろい作品でした。チェスを全く知らない人でも全然楽しめます。</p>
+<p> </p>
+<p>今回の記事では、このドラマの魅力を語りたいと思います。</p>
+<p> </p>
+<p>もちろんネタバレが含まれますのでご注意を。</p>
+<p>[:contents]</p>
+<p> </p>
+<p> </p>
+<p><iframe style="border: none;" src="https://rcm-fe.amazon-adsystem.com/e/cm?o=9&amp;p=12&amp;l=ur1&amp;category=audible&amp;banner=04TW4TSNDNB96FMCBT82&amp;f=ifr&amp;linkID=2701c5105a51f06678eef5a7cfe8e459&amp;t=horokusa-22&amp;tracking_id=horokusa-22" width="300" height="250" frameborder="0" marginwidth="0" scrolling="no"></iframe></p>
+<p> </p>
+<h3>主演　アニャ・テイラージョイの魅力</h3>
+<p> </p>
+<p>この作品の魅力は、まずは主演であるアニャの存在だ。</p>
+<p> </p>
+<figure class="figure-image figure-image-fotolife mceNonEditable" title="96年生まれの24歳だ。">
+<p><img class="hatena-fotolife" title="f:id:asc_meta:20201115164231j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/a/asc_meta/20201115/20201115164231.jpg" alt="f:id:asc_meta:20201115164231j:plain" /></p>
+<figcaption class="mceEditable">96年生まれの24歳。</figcaption>
+</figure>
+<p> </p>
+<p>彼女はこれまで、サスペンス映画やホラー映画での出演が多かった。</p>
+<p> </p>
+<p>有名どころでは、シャマラン監督の『スプリット』だろう。それらの映画のイメージと今回の作品では、かなり演じる役柄が異なる。ホラーやサスペンス作品での彼女は、頭のおかしい存在たちに振り回される女性の姿を演じていた。しかし、クイーンズギャンビットの彼女は、主体的な主人公であるベスを演じる。</p>
+<p> </p>
+<p>可愛さと賢さを併せ持ち、品がある女性だ。</p>
+<p> </p>
+<p>幼いころからチェスの才能がずば抜けていてた。そして、自分の腕に自信をもっているのだ。だから、年上の男たちのなかに少女がまざっても全く負けることがない。男や女関係なく、自分がやることに自信を持っている。これが、最高にかっこいい。</p>
+<p> </p>
+<p>もちろん、女性らしい美しさもある。</p>
+<p> </p>
+<p>自信と美しさの融合が、とても素敵だ。演じるアニャの魅力が最大限に引き出されている。チェスの試合中にする彼女のしぐさも、チェスそのもののように計算されている。ぞくっと来るような迫力がある。</p>
+<p> </p>
+<p><img class="hatena-fotolife" title="f:id:asc_meta:20201115163922j:plain" src="https://cdn-ak.f.st-hatena.com/images/fotolife/a/asc_meta/20201115/20201115163922.jpg" alt="f:id:asc_meta:20201115163922j:plain" /></p>
+<p> </p>
+<p>対戦相手は、この視線を受け止めることになる。</p>
+<p> </p>
+<p>さらに、彼女には<strong>依存症</strong>という問題もある。薬や酒にハマって身を崩してしまう過程も描かれる。こうした脆さも彼女の深さにつながっている。</p>
+<p> </p>
+<p>最初はチェス以外のことには興味のない少女だった。そんな彼女も成長して女になっていく。自身の変化とチェスとの関係も見どころだろう。</p>
+<p> </p>
+<p> </p>
+<p><iframe style="border: none;" src="https://rcm-fe.amazon-adsystem.com/e/cm?o=9&amp;p=12&amp;l=ur1&amp;category=audible&amp;banner=04TW4TSNDNB96FMCBT82&amp;f=ifr&amp;linkID=2701c5105a51f06678eef5a7cfe8e459&amp;t=horokusa-22&amp;tracking_id=horokusa-22" width="300" height="250" frameborder="0" marginwidth="0" scrolling="no"></iframe></p>
+<p> </p>
+<p> </p>
+<h3>チェスの戦略「クイーンズギャンビット」とは？</h3>
+<p> </p>
+<p>チェスを描くドラマなのだから、当然のように専門用語が出てくる。けれど、専門用語なんか知らなくても、もちろん面白いドラマだった。</p>
+<p> </p>
+<p>タイトルにもなっている「クイーンズギャンビット」という用語のイメージを確認しておこう。</p>
+<p> </p>
+<p>「ギャンビット」とは、序盤にわざと自分の駒をとらせることで有利な状況にもっていく戦術だ。とくに、クイーンの列のポーンをとらせる場合をクイーンズギャンビットと呼ぶらしい。</p>
+<p> </p>
+<p>チェス♟を自分でプレイし、知識ももっとあったなら...</p>
+<p>さらに楽しめたに違いない。</p>
+<p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
+<h3>ベスの人生</h3>
+<p> </p>
+<p>クイーンズギャンビットというタイトル。</p>
+<p>この戦術、タイトルは何を暗示しているのだろうか？</p>
+<p> </p>
+<p><strong>「何かを犠牲にして有利な状況を作り出す」</strong></p>
+<p> </p>
+<p>ベスという女性の人生ドラマと重なるように見える。</p>
+<p> </p>
+<p>彼女は孤児であり、母親や家族を最初から失ってしまう。とくに、母親のほうの家庭の事情は複雑そうだ。実家には頼れない。孤児院に行くしかなかった。</p>
+<p> </p>
+<p>しかし、その分彼女は孤児院で大切なものと出会う。</p>
+<p> </p>
+<p>チェスや恩師、友人である。</p>
+<p> </p>
+<p>最終話である「エンドゲーム」ではこうした人生をなぞる。自分が払った犠牲と、その分得た幸せをベスは確認するのだ。そして、最終決戦に臨む。</p>
+<p> </p>
+<p> </p>
+<p><iframe style="border: none;" src="https://rcm-fe.amazon-adsystem.com/e/cm?o=9&amp;p=12&amp;l=ur1&amp;category=audible&amp;banner=04TW4TSNDNB96FMCBT82&amp;f=ifr&amp;linkID=2701c5105a51f06678eef5a7cfe8e459&amp;t=horokusa-22&amp;tracking_id=horokusa-22" width="300" height="250" frameborder="0" marginwidth="0" scrolling="no"></iframe></p>
+<p> </p>
+<p> </p>
+<h3>とにかくおしゃれ</h3>
+<p>この作品のさらなる魅力は、画がずっとおしゃれだということだ。</p>
+<p> </p>
+<p>60年代の雰囲気がなんだかいい。</p>
+<p> </p>
+<p>建物の様子や衣装など、場面ごとに素敵な空間が広がっている。ベスが住む家も色彩が素敵だ。</p>
+<p> </p>
+<p>こうした目に見えるものだけではなく、全体の話の進み方、音楽の使い方なども軽快だ。だから、重くなりすぎない。とても見やすいドラマになっている。こうした全体のバランスが、テンポが良くおしゃれなイメージにつながっている。</p>
+<p> </p>
+<p>全体でも7話しかなく、あっという間に見終わる。</p>
+<p> </p>
+<p>このドラマはリミテッドシリーズだ。続編の予定はない。</p>
+<p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
+<h3>チェス入門へ</h3>
+<p>このドラマを見てチェスに興味を持つ人も大勢いると思う。とくに、小さな子供ならベスのようにチェスの世界にどっぷりとはまってしまうかもしれない。</p>
+<p> </p>
+<p>私自身、チェスに興味をもったきっかけは映画『ハリーポッター』だった。懐かしい。</p>
+<p> </p>
+<p> </p>
+<p><iframe style="width: 120px; height: 240px;" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&amp;t=horokusa-22&amp;m=amazon&amp;o=9&amp;p=8&amp;l=as1&amp;IS2=1&amp;detail=1&amp;asins=4806915300&amp;linkId=6a2c01f8f2a4cc4c8cf77d0fd553656e&amp;bc1=ffffff&amp;lt1=_blank&amp;fc1=333333&amp;lc1=0066c0&amp;bg1=ffffff&amp;f=ifr" frameborder="0" marginwidth="0" marginheight="0" scrolling="no">
+
+    </iframe></p>
+<p> </p>
+<p> </p>
+<p><iframe style="width: 120px; height: 240px;" src="https://rcm-fe.amazon-adsystem.com/e/cm?ref=qf_sp_asin_til&amp;t=horokusa-22&amp;m=amazon&amp;o=9&amp;p=8&amp;l=as1&amp;IS2=1&amp;detail=1&amp;asins=4309271723&amp;linkId=8cb71e84afd51d6051f01cc1b1d3e1c4&amp;bc1=ffffff&amp;lt1=_blank&amp;fc1=333333&amp;lc1=0066c0&amp;bg1=ffffff&amp;f=ifr" frameborder="0" marginwidth="0" marginheight="0" scrolling="no">
+
+    </iframe></p>
+<p> </p>
+<p> </p>
+<p><iframe style="border: none;" src="https://rcm-fe.amazon-adsystem.com/e/cm?o=9&amp;p=12&amp;l=ur1&amp;category=audible&amp;banner=04TW4TSNDNB96FMCBT82&amp;f=ifr&amp;linkID=2701c5105a51f06678eef5a7cfe8e459&amp;t=horokusa-22&amp;tracking_id=horokusa-22" width="300" height="250" frameborder="0" marginwidth="0" scrolling="no"></iframe></p>
+<p> </p>
+<p> </p>
+<h3>関連記事</h3>
+<p> </p>
+<p><iframe class="embed-card embed-blogcard" style="display: block; width: 100%; height: 190px; max-width: 500px; margin: 10px 0px;" title="【アナイアレイション -全滅領域-】解説・ネタバレ　ラストの意味とは？　生命哲学な映画 - 「好き」をブチ抜く" src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fwww.buchinuku.work%2Fentry%2Fannihilation" frameborder="0" scrolling="no"></iframe><cite class="hatena-citation"><a href="https://www.buchinuku.work/entry/annihilation">www.buchinuku.work</a></cite></p>
+<p><iframe class="embed-card embed-blogcard" style="display: block; width: 100%; height: 190px; max-width: 500px; margin: 10px 0px;" title="Netflix ダーク シーズン3【ネタバレ徹底解説・各話伏線まとめ】綺麗に完結！すべての謎が明らかに - 「好き」をブチ抜く" src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fwww.buchinuku.work%2Fentry%2F2020%2F6%2F29" frameborder="0" scrolling="no"></iframe><cite class="hatena-citation"><a href="https://www.buchinuku.work/entry/2020/6/29">www.buchinuku.work</a></cite></p>
+<p><iframe class="embed-card embed-blogcard" style="display: block; width: 100%; height: 190px; max-width: 500px; margin: 10px 0px;" title="前作よりおもろい続編‼ ザ・ベビーシッター～キラークイーン～【ネタバレ感想】 - 「好き」をブチ抜く" src="https://hatenablog-parts.com/embed?url=https%3A%2F%2Fwww.buchinuku.work%2Fentry%2F2020%2F9%2F12" frameborder="0" scrolling="no"></iframe><cite class="hatena-citation"><a href="https://www.buchinuku.work/entry/2020/9/12">www.buchinuku.work</a></cite></p>
+<p> </p>
+<p> </p>
+<p> </p>
 </body>
 </html>
