--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
     <p>2016年　慶應義塾大学　総合政策学部入学</p>
     <p>2021年3月　卒業見込み</p>
     <p> </p>
-    <p>大学では人工知能や認知科学について勉強。研究室での研究テーマは「人工知能と不確実性」。</p>
-    <p> </p>
-    <p>具体的には、金融データという不確実性に<strong>強化学習</strong>でアプローチしています。そのため、AI・機械学習の基礎的な実践経験があります。正直、エンジニアとしてものづくりの実践経験はまだまだ足らないと感じています。ただし、新しい技術が好きなので、求められる技術を短期間で習得する自信、興味、やる気はあります。</p>
+    <p>大学では人工知能や認知科学について勉強。研究室での研究テーマは「人工知能と不確実性」です。</p>
+    <p></p>
+    <p>具体的には、金融データという不確実性に<strong>強化学習</strong>でアプローチしています。金融データにおける確率で評価できない不確実性、
+        強化学習における学習プロセス内の確率的行動の不確実性、疑似乱数と機械学習の因果関係という不確実性、
+        この3つの不確実性の解析に興味があります。</p>
+    <p></p>
+    <p>AI・機械学習の基礎的な実践経験があります。正直、エンジニアとしてものづくりの実践経験はまだまだ足らないと感じています。ただし、新しい技術が好きなので、求められる技術を短期間で習得する自信、興味、やる気はあります。</p>
     <h3>目次</h3>
     <p><a href="#index1">プログラミングの経験</a></p>
     <p><a href="#index2">プログラミングの楽しさ</a></p>
@@ -34,7 +38,7 @@
     <h3 id="index1">プログラミングの経験</h3>
     <p> </p>
     <p>・Python(3年ほど)・・・人工知能についての研究で使用。調べれば、いろいろなことが実装可能。</p>
-    <p>・html、css、javascript、Vue.js (2年ほど)・・・チュートリアル＋α程度の知識と実戦経験</p>
+    <p>・html、css、javascript、Vue.js (2年ほど)・・・チュートリアル＋α程度の知識と実践経験</p>
     <p> </p>
     <p>プログラミング言語そのものが好きです。以下3つの代表的なプログラミング言語のパラダイムがありますが、どれも経験があります。</p>
     <p>・手続き型言語</p>
@@ -73,21 +77,30 @@
     <p> </p>
     <p> </p>
     <h3 id="index4">成果物</h3>
-    <p>・Qiita</p>
+    <h4>・Qiita</h4>
     <p><a href="https://qiita.com/kyogoku_meta">kyogoku_meta - Qiita</a></p>
     <p> </p>
-    <p>・個人ブログ</p>
+    <h4>・論文</h4>
+    <p>学部生の身ながら、国際的な科学誌Scienceに論文（eLetter）を投稿しました。人工知能の応用についてです。</p>
+    <p><a href="http://science.sciencemag.org/content/362/6413/410/tab-e-letters">・Individuals can easily apply AI technology to agriculture</a></p>
+    <p><a href="http://advances.sciencemag.org/content/4/8/eaap9815/tab-e-letters">・AI can find a better set of partners than those matching experts can choose</a></p>
+    <p> </p>
+    <p> </p>
+    <br />
+    <br />
+    <h4>・個人ブログ</h4>
     <p><a href="https://www.buchinuku.work/archive">記事一覧 - 「好き」をブチ抜く</a></p>
     <p> </p>
     <p><strong>「好きをぶち抜く」</strong>という個人ブログを運営しています。累計40万アクセスほどです。30本ほど、プログラミングに関する記事も執筆しています。</p>
     <p><a href="https://www.buchinuku.work/archive/category/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0">プログラミング カテゴリーの記事一覧 - 「好き」をブチ抜く</a></p>
     <p> </p>
     <p> </p>
-    <p>・電子書籍執筆</p>
+    <h4>・電子書籍執筆</h4>
     <p><a href="https://www.amazon.co.jp/-/en/%E3%83%A1%E3%82%BF-ebook/dp/B07XBGXSCZ/ref=sr_1_1?dchild=1&amp;keywords=python+%E3%82%BD%E3%83%BC%E3%83%88&amp;qid=1607392403&amp;sr=8-1">Amazon.co.jp: Python脱初心者へ ソートアルゴリズムを最短攻略!! eBook: メタ: Kindle Store</a></p>
     <p>Pythonの基礎に関する電子書籍を個人で販売しています。</p>
     <p> </p>
-    <p>・数学に関するアウトプット</p>
+    <p> </p>
+    <h4>・数学に関するアウトプット</h4>
     <p><a href="https://www2.slideshare.net/meta_7/from-109939800?qid=41d17768-e24d-4171-a88c-e15514d6abfd&amp;v=&amp;b=&amp;from_search=3">不完全性定理入門 from「コンピュータは数学者になれるのか」</a></p>
     <p>数理論理学に関する話題をまとめています。</p>
     <p> </p>
