--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <h3>目次</h3>
     <p><a href="#index1">プログラミングの経験</a></p>
     <p><a href="#index2">プログラミングの楽しさ</a></p>
-    <p><a href="#index3">業務経験</a></p>
-    <p><a href="#index4">成果物</a></p>
+    <p><a href="#index3">編集工学</a></p>
+    <p><a href="#index4">業務経験</a></p>
+    <p><a href="#index5">成果物</a></p>
     <p> </p>
     <p> </p>
     <p> </p>
@@ -62,7 +63,17 @@
     <p> </p>
     <p> </p>
     <p> </p>
-    <h3 id="index3">業務経験</h3>
+    <h3 id="index3">編集工学</h3>
+    <p>あらゆる情報を遊ばせ創造していく方法論として、「編集工学」という考え方に注目しています。編集工学の提唱者である松岡正剛の「情報は一人ではいられない」という言葉が印象的です。 </p>
+
+    <p>編集工学を体系的に学ぶことのできるイシス編集学校にて、2019年2月、基礎コースを修了しました。 </p>
+    <p><a href="https://es.isis.ne.jp/outline/about/">イシス編集学校</a></p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+
+    <h3 id="index4">業務経験</h3>
     <p>・株式会社Avilen（2019年8月～）</p>
     <p>社会人、学生向けのプログラミング、AI技術の講師を担当。</p>
     <p>プログラミングやAI技術習得のための教材作成、コーディングを担当。</p>
@@ -76,7 +87,7 @@
     <p> </p>
     <p> </p>
     <p> </p>
-    <h3 id="index4">成果物</h3>
+    <h3 id="index5">成果物</h3>
     <h4>・Qiita</h4>
     <p><a href="https://qiita.com/kyogoku_meta">kyogoku_meta - Qiita</a></p>
     <p> </p>
